sidebar and image cleanup

--- a/docs/use-the-network/find-a-lns-provider.mdx
+++ b/docs/use-the-network/find-a-lns-provider.mdx
@@ -1,22 +1,22 @@
 ---
 id: find-a-lns-provider
-title: Find A LNS Provider
-pagination_label: Find A LNS Provider
-sidebar_label: Find A LNS Provider
-description: Find A LNS Provider
+title: Find a LoRaWAN Network Server Provider
+pagination_label: Find a LoRaWAN Network Server Provider
+sidebar_label: Find a LoRaWAN Network Server Provider
+description: Find a LoRaWAN Network Server Provider
 image: https://docs.helium.com/img/link-image.png
 slug: /find-a-lns-provider
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Which Open LNS Providers Can I Use?​
+## Which OpenLNS Providers Can I Use?​
 
 Professional hosting companies can provide support and immediate access to a ready-to-go
 connectivity platform. LNS Services will vary in price, support, and features depending on the
 company. Companies may offer public shared servers, and/or private servers.
 
-The following providers within the Open LNS initiative offer multi-tenant and private instances to
+The following providers within the OpenLNS initiative offer multi-tenant and private instances to
 businesses and individuals.
 
 | Company                            | Service Region | Server Locations | Public/Private   | Pricing                                                                        |
