--- a/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui.mdx
@@ -2,7 +2,7 @@
 id: buy-an-oui
 title: Buy An Organizationally Unique Identifier
 pagination_label: Buy An Organizationally Unique Identifier
-sidebar_label: Buy An Organizationally Unique Identifier
+sidebar_label: Buy an Organizationally Unique Identifier
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /use-the-network/run-a-network-server/buy-an-oui
