replace console with LNS landing page

--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -63,48 +63,37 @@ the two most relevant for developers using the Network.
       <p className="podtext">
         Purchase and customize Helium-enabled devices or prototypes and build your own.
       </p>
+      <a href="/use-the-network/devices">
+        Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+      </a>
       <h5>Quick Links</h5>
-      <a className="block" href="/use-the-network/devices/">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Devices
+      <a className="block" href="/use-the-network/devices/ready-to-use">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Ready To Use Devices
+      </a>
+      <a className="block" href="/use-the-network/devices/development">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Development Devices
       </a>
     </div>
     <div class="col col--6 " style={{ marginBottom: 100 }}>
       <img
         className="homeicon"
         style={{ maxWidth: 85 }}
-        src={useBaseUrl('img/use-the-network/use2.svg')}
+        src={useBaseUrl('img/use-the-network/use2.png')}
       />
-      <h3>Helium Console</h3>
+      <h3>LoRaWAN Network Servers</h3>
       <p className="podtext">
-        The Helium Console is a web-based device management tool that allows developers to register,
-        authenticate, and manage their devices on the Helium Network.
+        The OpenLNS initiative allows anyone looking to deploy devices on the Helium Network to use
+        any LoRaWAN Network Server.
       </p>
-      <a href="https://console.helium.com">
-        Create Console Account{' '}
-        <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+      <a href="/lorawan-network-servers">
+        Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
-      <a className="block" href="/use-the-network/console">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Console Resources
+      <a className="block" href="/find-a-lns-provider">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Find an LNS Provider
       </a>
-      <a className="block" href="/use-the-network/console/quickstart">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Console Quickstart
-      </a>
-      <a className="block" href="/use-the-network/console/adding-devices">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Adding Devices
-      </a>
-      <a className="block" href="/use-the-network/console/labels">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Labels
-      </a>
-      <a className="block" href="/use-the-network/console/integrations">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Integrations
-      </a>
-      <a className="block" href="/use-the-network/console/api">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Console API
-      </a>
-      <a className="block" href="/use-the-network/console/hosting-providers">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Console Hosting
-        Providers
+      <a className="block" href="/iot/open-lns-quickstart">
+        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Host Your Own LNS
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -152,12 +141,6 @@ the two most relevant for developers using the Network.
       </a>
       <a className="block" href="/iot/coverage-mapping/quickstart">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mappers Quickstart
-      </a>
-      <a className="block" href="/iot/coverage-mapping/api">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mappers API
-      </a>
-      <a className="block" href="/iot/coverage-mapping/adeunis-mapper">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Adeunis Mapper
       </a>
     </div>
   </div>
