--- a/docs/use-the-network/lorawan-network-servers.mdx
+++ b/docs/use-the-network/lorawan-network-servers.mdx
@@ -19,7 +19,7 @@ crucial role in ensuring the scalability, reliability, and interoperability of L
 ## What is the OpenLNS Initiative?
 
 ​The OpenLNS initiative allows anyone looking to deploy devices on the Helium Network to use any
-LoRaWAN Network Server (LNS). The LNS you choose must compile with the LoRaWAN specification to
+LoRaWAN Network Server (LNS). The LNS you choose must comply with the LoRaWAN specification to
 access the Helium Network.
 
 OpenLNS will deliver the following network improvements:
@@ -37,10 +37,9 @@ There are a couple of options to get started onboarding devices and connecting t
 
 ### Work with a Professional LNS Service Provider
 
-This is a great option for getting started, and professional hosting companies can provide support
-and immediate access to a ready-to-go connectivity platform. LNS Services will vary in price,
-support, and features depending on the company. Companies may offer public shared servers, and/or
-private servers.
+Professional hosting companies can provide support and immediate access to a ready-to-go
+connectivity platform. LNS Services will vary in price, support, and features depending on the
+company. Companies may offer public shared servers, and/or private servers.
 
 [Find a Helium LNS Server Provider.][find-provider]
 
