--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -11,7 +11,7 @@ slug: /iot/open-lns
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The OpenLNS initiative allows anyone looking to deploy devices on the Helium Network to use any
-LoRaWAN Network Server (LNS). The LNS you choose must compile with the LoRaWAN specification to
+LoRaWAN Network Server (LNS). The LNS you choose must comply with the LoRaWAN specification to
 access the Helium Network.
 
 ## Why OpenLNS?
