--- a/docs/use-the-network/find-a-lns-provider.mdx
+++ b/docs/use-the-network/find-a-lns-provider.mdx
@@ -19,12 +19,12 @@ company. Companies may offer public shared servers, and/or private servers.
 The following providers within the OpenLNS initiative offer multi-tenant and private instances to
 businesses and individuals.
 
-| Company                            | Service Region | Server Locations | Public/Private   | Pricing                                                                        |
-| ---------------------------------- | -------------- | ---------------- | ---------------- | ------------------------------------------------------------------------------ |
-| [IngeniousThings][ingeniousthings] | Global         | Europe           | Public & Private | Pay-per-message for public or pay-per-month for private and additional support |
-| [BrDot][brdot]                     | Latin America  |                  | Public & Private | pay-per-message or pay-per-month basis                                         |
-| [Parley Labs][parley-labs]         | USA            |                  | Public & Private |                                                                                |
-| Qnectd (by Helium Mart)            | Europe         |                  |                  |                                                                                |
+| Company                                                    | Service Region | Servers Shared/Private      | Public Server Location | Pricing Model                                                                                      |
+| ---------------------------------------------------------- | -------------- | --------------------------- | ---------------------- | -------------------------------------------------------------------------------------------------- |
+| [Helium IoT Europe][ingeniousthings] (by Ingenious Things) | Global         | Shared & Private by request | Europe                 | [Pay-per-message][hnt-iot-pricing] for public or pay-per-month for private and additional support. |
+| [BrDot][brdot]                                             | Americas       | Shared & Private by request | Brazil                 | Fixed monthly for active devices plus message plan for public & private service.                   |
+| [Qnectd][qnectd]                                           | Global         | Shared & Private by request | Eastern Europe         | Per-device monthly subscription cost, custom for private servers                                   |
+| [Parley Labs][parley-labs] **(Coming Soon)**               | USA            | Shared & Private by request | USA                    | COntact for pricing                                                                                |
 
 If you offer public LNS services and would like to add your company to this list, please make a pull
 request and include information for each listed field.
@@ -40,3 +40,5 @@ given provider.
 [ingeniousthings]: https://www.ingeniousthings.fr/
 [parley-labs]: https://parleylabs.com/
 [brdot]: https://brdot.com.br/
+[Qnectd]: https://qnectd.com/
+[hnt-iot-pricing]: https://www.helium-iot.eu/use-helium-with-helium-iot-europe/
