--- a/docs/use-the-network/find-a-lns-provider.mdx
+++ b/docs/use-the-network/find-a-lns-provider.mdx
@@ -37,8 +37,8 @@ given provider.
 
 :::
 
+[brdot]: https://brdot.com.br/
+[hnt-iot-pricing]: https://www.helium-iot.eu/use-helium-with-helium-iot-europe/
 [ingeniousthings]: https://www.ingeniousthings.fr/
 [parley-labs]: https://parleylabs.com/
-[brdot]: https://brdot.com.br/
-[Qnectd]: https://qnectd.com/
-[hnt-iot-pricing]: https://www.helium-iot.eu/use-helium-with-helium-iot-europe/
+[qnectd]: https://qnectd.com/
