--- a/docs/use-the-network/find-a-lns-provider.mdx
+++ b/docs/use-the-network/find-a-lns-provider.mdx
@@ -23,8 +23,8 @@ businesses and individuals.
 | ---------------------------------------------------------- | -------------- | --------------------------- | ---------------------- | -------------------------------------------------------------------------------------------------- |
 | [Helium IoT Europe][ingeniousthings] (by Ingenious Things) | Global         | Shared & Private by request | Europe                 | [Pay-per-message][hnt-iot-pricing] for public or pay-per-month for private and additional support. |
 | [BrDot][brdot]                                             | Americas       | Shared & Private by request | Brazil                 | Fixed monthly for active devices plus message plan for public & private service.                   |
-| [Qnectd][qnectd]                                           | Global         | Shared & Private by request | Eastern Europe         | Per-device monthly subscription cost, custom for private servers                                   |
-| [Parley Labs][parley-labs] **(Coming Soon)**               | USA            | Shared & Private by request | USA                    | COntact for pricing                                                                                |
+| [Qnectd][qnectd]                                           | Global         | Shared & Private by request | Eastern Europe         | Per-device monthly subscription cost, custom for private servers.                                  |
+| [Parley Labs][parley-labs] **(Coming Soon)**               | USA            | Shared & Private by request | USA                    | Contact for pricing.                                                                               |
 
 If you offer public LNS services and would like to add your company to this list, please make a pull
 request and include information for each listed field.
