--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -32,7 +32,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
           </a>
           <a className="quicklink quicklinkgreen" href="/use-the-network">
-            Build Devices to Use the Network{' '}
+            Use the Network{' '}
             <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
           </a>
           <a className="quicklink quicklinkred" href="/governance">
@@ -141,7 +141,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> Devices
       </a>
       <a className="block" href="/iot/open-lns">
-        <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> Open LNS
+        <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> OpenLNS
       </a>
       <a className="block" href="/lorawan-on-helium">
         <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> LoRaWAN on Helium
