--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -2,7 +2,7 @@
 id: lorawan-on-helium
 title: LoRaWAN On Helium
 pagination_label: LoRaWAN On Helium
-sidebar_label: Introduction
+sidebar_label: LoRaWAN On Helium
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /lorawan-on-helium
@@ -24,9 +24,7 @@ Therefore, we want to enable the multi-tenancy of LNSs on the same public LoRaWA
 this distinguishes Helium’s LoRaWAN Network from any other: public wireless infrastructure is now
 compatible with privately-run Network Servers.
 
-The rest of this article will discuss the networking primitives. If you want to go ahead and run a
-Network Server, please check out our article about
-[running a Network Server](/use-the-network/run-a-network-server).
+The rest of this article will discuss the networking primitives. If you want to go ahead and run a Network Server, please check out our article about [running a network server][run-server].
 
 ## The OUI
 
@@ -37,22 +35,20 @@ routing objects owned and maintained by the OUI Operator:
 - one or more **slabs** of DevAddrs, reserving NwkAddr space for the OUI's devices on the Helium
   Network
 
-A device defined by (AppEui, DevEui) can be allocated to any of the DevAddrs owned by the OUI. It is
+A device defined by (AppEUI, DevEUI) can be allocated to any of the DevAddrs owned by the OUI. It is
 even possible to multiplex many devices on the same DevAddr at the same time, using the Message
 Integrity Check (MIC) to disambiguate.
 
-Starting in 2023, Helium will be utilizing an Open LNS Initiative to allow more choice and increase
-usability. You can read more about the Open LNS Initiative at the
-[Helium Foundation Blog](https://medium.com/helium-foundation/scaling-iot-growth-with-heliums-open-lns-initiative-c906e6953d6d)
-or read more [here](/iot/open-lns).
+Starting in 2023, Helium will be utilizing an OpenLNS Initiative to allow more choice and increase
+usability. You can read more about the OpenLNS Initiative at the [Helium Foundation
+Blog][foundation-blog] or read more [here](/iot/open-lns).
 
 :::info
 
 Based on the latest benchmarking tests the upper limit for a Devaddr `1024` slab is approximately
-5800 devices but results still need to be replicated and bracketed. Community members are encouraged
-to run their own benchmarking tests. Instructions
-[here](/use-the-network/run-a-network-server/router-benchmarking). Requires basic familiarity with
-Linux and Bash command line.
+5800 devices, but results still need to be replicated and bracketed. Community members are
+encouraged to run their own benchmarking tests. Instructions [here][router-benchmark]. Requires
+basic familiarity with Linux and Bash command line.
 
 :::
 
@@ -103,6 +99,11 @@ Within DevAddr, there is the NwkAddr of a device:
 +-----------+--------------------+---------------+
 ```
 
-From the gateway's perspective, it is able to use DevAddr to determine the OUI of Data frames. A
-quick query can say which OUI owns this DevAddr slab. This look-up and routing by DevAddr instead of
-by \(AppEUI, DevEUI\) via _xorhash_ filters is generally much quicker.
+From the gateway's perspective, it can use DevAddr to determine the OUI of Data frames. A quick
+query can say which OUI owns this DevAddr slab. This look-up and routing by DevAddr instead of by
+\(AppEUI, DevEUI\) via _xorhash_ filters is generally much quicker.
+
+[foundation-blog]:
+  https://medium.com/helium-foundation/scaling-iot-growth-with-heliums-open-lns-initiative-c906e6953d6d
+[run-server]: /use-the-network/run-a-network-server
+[router-benchmark]: /use-the-network/run-a-network-server/router-benchmarking
