add Nebra api link

--- a/docs/solana/migration/blockchain-api.mdx
+++ b/docs/solana/migration/blockchain-api.mdx
@@ -19,4 +19,5 @@ For ongoing access, several organizations are already building new API services 
 [Oracle Data](/oracles/oracle-data) available after the migration. These organizations include (but
 not limited to), [Hotspotty](https://hotspotty.net/api/),
 [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html),
+[Nebra](https://nebra.io/hntapi),
 [Relay](https://www.relaydevice.com) and [Watchium](https://watchium.disk91.com).
