--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-iam.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-iam.mdx
@@ -23,6 +23,9 @@ Indoor Ambiance Monitor including CO2, TVOC and Motion Sensor for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - CO2
@@ -36,8 +39,8 @@ Indoor Ambiance Monitor including CO2, TVOC and Motion Sensor for LoRaWAN.
 
 #### Dimensions:
 
-- width: 120 mm
-- length: 80 mm
+- width: 80 mm
+- length: 120 mm
 - height: 27 mm
 
 #### Weight:
