--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr26.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr26.mdx
@@ -3,7 +3,7 @@ id: dl-pr26
 title: DL-PR26
 pagination_label: DL-PR26
 sidebar_label: DL-PR26
-description: Pressure / Liquid Level And Temperature Sensor For LoRaWAN
+description: Pressure / Liquid Level And Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pr26.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pr26
 ---
@@ -22,6 +22,9 @@ Pressure / Liquid Level and Temperature Sensor for LoRaWAN.
 - [Datasheet](https://cdn.decentlab.com/download/datasheets/Decentlab-DL-PR26-datasheet.pdf)
 
 ### Specifications
+
+#### LoRaWAN device type:
+- Class A end-device
 
 #### Sensors:
 
