--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
@@ -3,7 +3,7 @@ id: dl-mbx
 title: Dl-Mbx
 pagination_label: Dl Mbx
 sidebar_label: Dl-Mbx
-description: Ultrasonic Distance / Level Sensor For LoRaWAN
+description: Ultrasonic Distance / Level Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-mbx.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-mbx
 ---
@@ -22,6 +22,9 @@ Ultrasonic Distance / Level Sensor for LoRaWAN
 - [Datasheet](https://cdn.decentlab.com/download/datasheets/Decentlab-DL-MBX-datasheet.pdf)
 
 ### Specifications
+
+#### LoRaWAN device type:
+- Class A end-device
 
 #### Sensors:
 
