--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-atm22.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-atm22.mdx
@@ -23,6 +23,9 @@ Wind Speed, Wind Direction and Temperature Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - wind speed
