--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-atm41.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-atm41.mdx
@@ -23,6 +23,9 @@ Eleven Parameter Weather Station for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - solar radiation
