--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-ctd10.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-ctd10.mdx
@@ -23,6 +23,9 @@ Pressure / Liquid Level, Temperature and Electrical Conductivity for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - conductivity
