--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-002.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-002.mdx
@@ -23,6 +23,9 @@ Pulse Counter Dry Contact Transmitter for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pulse count
