--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
@@ -23,6 +23,9 @@ Temperature Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
