--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dws.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dws.mdx
@@ -22,6 +22,9 @@ Weighing Scale for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pulse frequency
