--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
@@ -23,6 +23,9 @@ Infrared Thermometer / Surface Temperature Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - surface temperature
