--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-kl66.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-kl66.mdx
@@ -23,6 +23,9 @@ Strain / Weight Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pulse frequency
