--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-lid.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-lid.mdx
@@ -23,6 +23,9 @@ Laser Distance / Level Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - distance
