--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-lp8p.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-lp8p.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-lp8p
-title: Dl-Lp8P
-pagination_label: Dl Lp8P
-sidebar_label: Dl-Lp8P
-description: Co2, Temperature, Humidity And Barometric Pressure Sensor For LoRaWAN
+title: DL-LP8P
+pagination_label: DL-LP8P
+sidebar_label: DL-LP8P
+description: Co2, Temperature, Humidity And Barometric Pressure Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-lp8p.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-lp8p
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-LP8P
 
-CO2, Temperature, Humidity and Barometric Pressure Sensor for LoRaWAN
+CO2, Temperature, Humidity and Barometric Pressure Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-lp8p.jpg')} />
 
@@ -23,12 +23,15 @@ CO2, Temperature, Humidity and Barometric Pressure Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
 - humidity
 - barometer
-- co2
+- CO2
 - battery
 
 #### Dimensions:
@@ -39,11 +42,11 @@ CO2, Temperature, Humidity and Barometric Pressure Sensor for LoRaWAN
 
 #### Weight:
 
-- 376 grams
+- 376 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
