--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-optod.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-optod.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-optod
-title: Dl-Optod
-pagination_label: Dl Optod
-sidebar_label: Dl-Optod
-description: Optical Dissolved Oxygen And Temperature Sensor For LoRaWAN
+title: DL-OPTOD
+pagination_label: DL-OPTOD
+sidebar_label: DL-OPTOD
+description: Optical Dissolved Oxygen And Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-optod.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-optod
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-OPTOD
 
-Optical Dissolved Oxygen and Temperature Sensor for LoRaWAN
+Optical Dissolved Oxygen and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-optod.jpg')} />
 
@@ -23,24 +23,33 @@ Optical Dissolved Oxygen and Temperature Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
 - dissolved oxygen
+- battery
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 25 mm
+- length: 146 mm
+
 #### Weight:
 
-- 1050 grams
+- 1050 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
