--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-par.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-par.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-par
-title: Dl-Par
-pagination_label: Dl Par
-sidebar_label: Dl-Par
-description: Photosynthetically Active Radiation Sensor For LoRaWAN
+title: DL-PAR
+pagination_label: DL-PAR
+sidebar_label: DL-PAR
+description: Photosynthetically Active Radiation Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pxr.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-par
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PAR
 
-Photosynthetically Active Radiation Sensor for LoRaWAN
+Photosynthetically Active Radiation Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pxr.jpg')} />
 
@@ -23,6 +23,9 @@ Photosynthetically Active Radiation Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - solar radiation
@@ -30,17 +33,26 @@ Photosynthetically Active Radiation Sensor for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 25 mm
+- height: 33 mm
+
+Leveling plate:
+- diameter: 80 mm
+- height: 8 mm
+
 #### Weight:
 
-- 620 grams
+- 620 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
