--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pm.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pm.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-pm
-title: Dl-Pm
-pagination_label: Dl Pm
-sidebar_label: Dl-Pm
-description: Particulate Matter, Temperature, Humidity And Barometric Pressure For LoRaWAN
+title: DL-PM
+pagination_label: DL-PM
+sidebar_label: DL-PM
+description: Particulate Matter, Temperature, Humidity And Barometric Pressure Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pm.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pm
 ---
@@ -12,19 +12,23 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PM
 
-Particulate Matter, Temperature, Humidity and Barometric Pressure for LoRaWAN
+Particulate Matter, Temperature, Humidity and Barometric Pressure Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pm.jpg')} />
 
 ### Resources
 
 - [Product Page](https://www.decentlab.com/products/particulate-matter-temperature-humidity-and-barometric-pressure-sensor-for-lorawan)
+- [Datasheet](https://cdn.decentlab.com/download/datasheets/Decentlab-DL-PM-datasheet.pdf)
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
-- particulate matter
+- Particulate Matter (PM)
 - temperature
 - humidity
 - barometer
@@ -38,12 +42,17 @@ Particulate Matter, Temperature, Humidity and Barometric Pressure for LoRaWAN
 
 #### Weight:
 
-- 400 grams
+- 400 grams (including batteries)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
+
+#### Note:
+- The device requires both an external power supply and batteries.
+- External power supply: for the PM sensor exclusively.
+- If the external power supply is not connected, the device operates normally, but omitting PM sensor data.
 
 ---
 
