Update dl-itst.mdx (#1478)
Forgot the heading correction.

--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-itst.mdx
@@ -10,7 +10,7 @@ slug: /use-the-network/devices/ready-to-use/decentlab/dl-itst
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## DL-ITST
+## DL-ITST-001
 
 Infrared Thermometer / Surface Temperature Sensor for LoRaWAN.
 
