--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-5tm.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-5tm.mdx
@@ -23,6 +23,9 @@ Legacy Soil Moisture and Temperature Sensor for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - moisture
