--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-003.mdx
@@ -23,6 +23,9 @@ Digital Input Dry Contact Transmitter for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - digital input
