--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-010.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-010.mdx
@@ -23,6 +23,9 @@ Dual Pulse Counter Dry Contact Transmitter for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pulse count
