--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-012.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-012.mdx
@@ -23,6 +23,9 @@ Analog Strain Gauge Sensor Transmitter for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - analog input
