Update dl-dlr2-004.mdx (#1491)
Added device type.

--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-004.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-004.mdx
@@ -23,6 +23,9 @@ Analog 4 ... 20 mA Sensor Transmitter for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - analog input
