--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr36.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr36.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-pr36
-title: Dl-Pr36
-pagination_label: Dl Pr36
-sidebar_label: Dl-Pr36
-description: High-Precision Pressure / Liquid Level And Temperature Sensor For For LoRaWAN
+title: DL-PR36
+pagination_label: DL-PR36
+sidebar_label: DL-PR36
+description: High-Precision Pressure / Liquid Level And Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pr36.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pr36
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PR36
 
-High-Precision Pressure / Liquid Level and Temperature Sensor for for LoRaWAN
+High-Precision Pressure / Liquid Level and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pr36.jpg')} />
 
@@ -23,6 +23,9 @@ High-Precision Pressure / Liquid Level and Temperature Sensor for for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pressure
@@ -31,17 +34,25 @@ High-Precision Pressure / Liquid Level and Temperature Sensor for for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 22 mm
+- length: 127 mm
+
+Sensor cable:
+- length: 10 m
+
 #### Weight:
 
-- 570 grams
+- 570 grams (including batteries and sensor, not including cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
