--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr36ctd.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr36ctd.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-pr36ctd
-title: Dl-Pr36Ctd
-pagination_label: Dl Pr36Ctd
-sidebar_label: Dl-Pr36Ctd
-description: High-Precision Pressure / Liquid Level, Temperature And Electrical For LoRaWAN
+title: DL-PR36CTD
+pagination_label: DL-PR36CTD
+sidebar_label: DL-PR36CTD
+description: High-Precision Pressure / Liquid Level, Temperature and Electrical Conductivity Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pr36ctd.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pr36ctd
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PR36CTD
 
-High-Precision Pressure / Liquid Level, Temperature and Electrical for LoRaWAN
+High-Precision Pressure / Liquid Level, Temperature and Electrical Conductivity Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pr36ctd.jpg')} />
 
@@ -23,26 +23,37 @@ High-Precision Pressure / Liquid Level, Temperature and Electrical for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pressure
 - temperature
-- conductivity
+- electrical conductivity
 - battery
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 22 mm
+- lenght: 238 mm
+
+Sensor cable:
+- length: 10 m
+
 #### Weight:
 
-- 700 grams
+- 700 grams (including batteries and sensor, not including cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
