--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-dlr2-008
-title: DL-DLR2-00
-pagination_label: DL-DLR2-00
-sidebar_label: DL-DLR2-00
-description: Analog Pt100 Sensor Transmitter for LoRaWAN
+title: DL-DLR2-008
+pagination_label: DL-DLR2-008
+sidebar_label: DL-DLR2-008
+description: Analog PT100 Sensor Transmitter for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-dlr2.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-dlr2-008
 ---
