--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-ds18.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-ds18
-title: Dl-Ds18
-pagination_label: Dl Ds18
-sidebar_label: Dl-Ds18
-description: Temperature Sensor For LoRaWAN
+title: DL-DS18
+pagination_label: DL-DS18
+sidebar_label: DL-DS18
+description: Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-ds18.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-ds18
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-DS18
 
-Temperature Sensor for LoRaWAN
+Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-ds18.jpg')} />
 
