--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pyr.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pyr.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-pyr
-title: Dl-Pyr
-pagination_label: Dl Pyr
-sidebar_label: Dl-Pyr
-description: Total Solar Radiation Sensor For LoRaWAN
+title: DL-PYR
+pagination_label: DL-PYR
+sidebar_label: DL-PYR
+description: Total Solar Radiation Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pxr.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pyr
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PYR
 
-Total Solar Radiation Sensor for LoRaWAN
+Total Solar Radiation Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pxr.jpg')} />
 
@@ -23,6 +23,9 @@ Total Solar Radiation Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - solar radiation
@@ -30,17 +33,26 @@ Total Solar Radiation Sensor for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 25 mm
+- height: 33 mm
+
+Leveling plate:
+- diameter: 80 mm
+- height: 8 mm
+
 #### Weight:
 
-- 620 grams
+- 620 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
