--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-sht35-002.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-sht35-002.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-sht35-002
-title: Dl-Sht35-002
-pagination_label: Dl Sht35 002
-sidebar_label: Dl-Sht35-002
-description: Air Temperature And Humidity Sensor For LoRaWAN
+title: DL-SHT35-002
+pagination_label: DL-SHT35-002
+sidebar_label: DL-SHT35-002
+description: Air Temperature and Humidity Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-sht35-002.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-sht35-002
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-SHT35-002
 
-Air Temperature and Humidity Sensor for LoRaWAN
+Air Temperature and Humidity Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-sht35-002.jpg')} />
 
@@ -23,6 +23,9 @@ Air Temperature and Humidity Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
@@ -31,17 +34,23 @@ Air Temperature and Humidity Sensor for LoRaWAN
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- width: 12 mm
+- lenght: 45 mm
+- height: 6 mm
+
 #### Weight:
 
-- 425 grams
+- 425 grams (including batteries, sensor with 2 m cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
