--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-sht35-001.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-sht35-001.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-sht35-001
-title: Dl-Sht35-001
-pagination_label: Dl Sht35 001
-sidebar_label: Dl-Sht35-001
-description: Air Temperature And Humidity Sensor With Radiation Shield For LoRaWAN
+title: DL-SHT35-001
+pagination_label: DL-SHT35-001
+sidebar_label: DL-SHT35-001
+description: Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-sht35-001.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-sht35-001
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-SHT35-001
 
-Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN
+Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-sht35-001.jpg')} />
 
@@ -23,6 +23,9 @@ Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
@@ -31,17 +34,18 @@ Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN
 
 #### Dimensions:
 
+Device including radiation shield:
 - width: 105 mm
 - length: 280 mm
 - height: 85 mm
 
 #### Weight:
 
-- 585 grams
+- 585 grams (including batteries and radiation shield)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
