--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-smtp.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-smtp.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-smtp
-title: Dl-Smtp
-pagination_label: Dl Smtp
-sidebar_label: Dl-Smtp
-description: Soil Moisture And Temperature Profile For LoRaWAN
+title: DL-SMTP
+pagination_label: DL-SMTP
+sidebar_label: DL-SMTP
+description: Soil Moisture and Temperature Profile Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-smtp.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-smtp
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-SMTP
 
-Soil Moisture and Temperature Profile for LoRaWAN
+Soil Moisture and Temperature Profile Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-smtp.jpg')} />
 
@@ -23,25 +23,36 @@ Soil Moisture and Temperature Profile for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
-- moisture
-- temperature
+- soil moisture
+- soil temperature
 - battery
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Probe:
+- shaft diameter: 32 mm
+- length: 600 mm
+
+Cable:
+- length: 5 m
+
 #### Weight:
 
-- 1500 grams
+- 1500 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
