--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-tbrg.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-tbrg.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-tbrg
-title: Dl-Tbrg
-pagination_label: Dl Tbrg
-sidebar_label: Dl-Tbrg
-description: Tipping Bucket Rain Gauge For LoRaWAN
+title: DL-TBRG
+pagination_label: DL-TBRG
+sidebar_label: DL-TBRG
+description: Tipping Bucket Rain Gauge for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-tbrg.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-tbrg
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-TBRG
 
-Tipping Bucket Rain Gauge for LoRaWAN
+Tipping Bucket Rain Gauge for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-tbrg.jpg')} />
 
@@ -23,6 +23,9 @@ Tipping Bucket Rain Gauge for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - precipitation
@@ -30,17 +33,22 @@ Tipping Bucket Rain Gauge for LoRaWAN
 
 #### Dimensions:
 
+**Device:**
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+**Rain gauge:**
+- diameter: 180 mm
+- height: 300 mm
+
 #### Weight:
 
-- 1530 grams
+- 1530 grams (including batteries, sensor, rain gauge and cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
