--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-trs11.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-trs11.mdx
@@ -3,7 +3,7 @@ id: dl-trs11
 title: Dl-Trs11
 pagination_label: Dl Trs11
 sidebar_label: Dl-Trs11
-description: Soil Moisture, Temperature And Electrical Conductivity Sensor For For LoRaWAN
+description: Soil Moisture and Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-trs1x.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-trs11
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-TRS11
 
-Soil Moisture, Temperature and Electrical Conductivity Sensor for for LoRaWAN
+Soil Moisture and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-trs1x.jpg')} />
 
