--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-trs21.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-trs21.mdx
@@ -1,9 +1,9 @@
 ---
 id: dl-trs21
-title: Dl-Trs21
-pagination_label: Dl Trs21
-sidebar_label: Dl-Trs21
-description: Soil Water Potential And Temperature Sensor For LoRaWAN
+title: DL-TRS21
+pagination_label: DL-TRS21
+sidebar_label: DL-TRS21
+description: Soil Water Potential and Temperature Sensor for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-trs21.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-trs21
 ---
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-TRS21
 
-Soil Water Potential and Temperature Sensor for LoRaWAN
+Soil Water Potential and Temperature Sensor for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-trs21.jpg')} />
 
@@ -23,25 +23,37 @@ Soil Water Potential and Temperature Sensor for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
-- water potential
-- temperature
+- soil water potential
+- soil temperature
 - battery
 
 #### Dimensions:
 
+**Device:**
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+**Probe:**
+- width: 35 mm
+- length: 96 mm
+- height: 15 mm
+
+**Cable:**
+- length: 5 m
+
 #### Weight:
 
-- 565 grams
+- 565 grams (including batteries, sensor and cable)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
