--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-zn2.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-zn2.mdx
@@ -1,18 +1,18 @@
 ---
-id: dl-zn2
-title: Dl-Zn2
-pagination_label: Dl Zn2
-sidebar_label: Dl-Zn2
-description: Dual Dendrometer For LoRaWAN
+id: dl-zn2-001
+title: DL-ZN2-001
+pagination_label: DL-ZN2-001
+sidebar_label: DL-ZN2-001
+description: T-shaped Dual Dendrometer for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-znx.jpg
-slug: /use-the-network/devices/ready-to-use/decentlab/dl-zn2
+slug: /use-the-network/devices/ready-to-use/decentlab/dl-zn2-001
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## DL-ZN2
+## DL-ZN2-001
 
-Dual Dendrometer for LoRaWAN
+T-shaped Dual Dendrometer for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-znx.jpg')} />
 
@@ -23,6 +23,9 @@ Dual Dendrometer for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - potentiometer
@@ -30,18 +33,27 @@ Dual Dendrometer for LoRaWAN
 
 #### Dimensions:
 
+**Device:**
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+**T-shaped dendrometer plate:**
+- width: 92 mm
+- length: 190 mm
+- height: 8 mm
+
 #### Weight:
 
-- 600 grams
+- 600 grams (including batteries, sensor and T-shaped dendrometer)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
+
+#### Note:
+- Dual means here the dendrometer has two displacement transducers.
 
 ---
 
