--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-rhc.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-rhc.mdx
@@ -1,18 +1,18 @@
 ---
 id: dl-rhc
-title: Dl-Rhc
-pagination_label: Dl Rhc
-sidebar_label: Dl-Rhc
-description: High-Precision Air Temperature And Humidity Sensor With Radiation For LoRaWAN
+title: DL-RHC-001
+pagination_label: DL-RHC-001
+sidebar_label: DL-RHC-001
+description: High-Precision Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-rhc.jpg
-slug: /use-the-network/devices/ready-to-use/decentlab/dl-rhc
+slug: /use-the-network/devices/ready-to-use/decentlab/dl-rhc-001
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## DL-RHC
+## DL-RHC-001
 
-High-Precision Air Temperature and Humidity Sensor with Radiation for LoRaWAN
+High-Precision Air Temperature and Humidity Sensor with Radiation Shield for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-rhc.jpg')} />
 
@@ -22,6 +22,9 @@ High-Precision Air Temperature and Humidity Sensor with Radiation for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - temperature
@@ -30,17 +33,18 @@ High-Precision Air Temperature and Humidity Sensor with Radiation for LoRaWAN
 
 #### Dimensions:
 
+**Device:**
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
 #### Weight:
 
-- 500 grams
+- 500 grams (including batteries, sensor and radiation shield)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
