--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-industrial-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-industrial-tracker.mdx
@@ -33,6 +33,9 @@ heavy-duty assets, inventory or livestock, taking advantage of its extraordinary
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - accelerometer
