--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-micro-tracker.mdx
@@ -27,6 +27,9 @@ touch of a button, you can have access to a variety of functionalities personali
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - accelerometer
