--- a/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-smart-badge.mdx
+++ b/docs/use-the-network/devices/ready-to-use/abeeway/abeeway-smart-badge.mdx
@@ -31,6 +31,9 @@ Button. A local zoning feature is able to signal danger zones with an 80db buzze
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - accelerometer
