resolve build error

--- a/docs/use-the-network/devices/ready-to-use/develiot/rwmr.mdx
+++ b/docs/use-the-network/devices/ready-to-use/develiot/rwmr.mdx
@@ -3,9 +3,6 @@ id: rwmr
 title: Remote Water Meter Reader
 pagination_label: RWMR
 sidebar_label: Remote Water Meter Reader
-description: The Remote Water Meter Reader is designed to easily connect with standard pulse water meters
-or other 3rd party equipment and transmit data wirelessly and autonomously utilizing LoRaWAN
-network protocol.
 image: img/use-the-network/devices/ready-to-use/develiot/main.png
 slug: /use-the-network/devices/ready-to-use/develiot/rwmr
 ---
@@ -14,9 +11,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Remote Water Meter Reader
 
-The Remote Water Meter Reader is designed to easily connect with standard pulse water meters
-or other 3rd party equipment and transmit data wirelessly and autonomously utilizing LoRaWAN
-network protocol. 
+The Remote Water Meter Reader is designed to easily connect with standard pulse water meters or
+other 3rd party equipment and transmit data wirelessly and autonomously utilizing LoRaWAN network
+protocol.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/develiot/main.png')} />
 
