resolve build error

--- a/docs/use-the-network/devices/ready-to-use/develiot/uaqms.mdx
+++ b/docs/use-the-network/devices/ready-to-use/develiot/uaqms.mdx
@@ -3,8 +3,6 @@ id: uaqms
 title: Urban Air Quality Monitoring Station
 pagination_label: UAQMS
 sidebar_label: Urban Air Quality Monitoring Station
-description: The Urban Air Quality Monitoring Station measures the key air quality indicators and environmental parameters with high accuracy, mapping the pollution in
-real-time.
 image: img/use-the-network/devices/ready-to-use/develiot/station.jpg
 slug: /use-the-network/devices/ready-to-use/develiot/uaqms
 ---
@@ -13,8 +11,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Urban Air Quality Monitoring Station
 
-The Urban Air Quality Monitoring Station measures the key air quality indicators and environmental parameters with high accuracy, mapping the pollution in
-real-time.
+The Urban Air Quality Monitoring Station measures the key air quality indicators and environmental
+parameters with high accuracy, mapping the pollution in real-time.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/develiot/station.jpg')} />
 
