Update dl-zn1.mdx (#1524)
* Update dl-zn1.mdx

Ignore first PR (#1522) on this.
Corrected spelling.
Added info.

* resolve build error

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-zn1.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-zn1.mdx
@@ -1,18 +1,18 @@
 ---
 id: dl-zn1
-title: Dl-Zn1
-pagination_label: Dl Zn1
-sidebar_label: Dl-Zn1
-description: Dendrometer For LoRaWAN
+title: DL-ZN1-001
+pagination_label: DL-ZN1-001
+sidebar_label: DL-ZN1-001
+description: T-shaped Dendrometer for LoRaWAN
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-znx.jpg
-slug: /use-the-network/devices/ready-to-use/decentlab/dl-zn1
+slug: /use-the-network/devices/ready-to-use/decentlab/dl-zn1-001
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## DL-ZN1
+## DL-ZN1-001
 
-Dendrometer for LoRaWAN
+T-shaped Dendrometer for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-znx.jpg')} />
 
@@ -23,6 +23,9 @@ Dendrometer for LoRaWAN
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - potentiometer
@@ -30,17 +33,23 @@ Dendrometer for LoRaWAN
 
 #### Dimensions:
 
+**Device:**
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+**T-shaped dendrometer plate:**
+- width: 92 mm
+- lenght: 190 mm
+- height: 8 mm
+
 #### Weight:
 
-- 600 grams
+- 600 grams (including batteries, sensor and T-shaped dendrometer)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
