Update oyster.mdx (#1534)
* Update oyster.mdx

Corrected spelling.
Added info, added weblink datasheet, note.

* resolve build errors

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
@@ -1,48 +1,54 @@
 ---
 id: oyster
-title: Oyster
-description: Ultra-rugged, long-life battery-powered LoRaWAN® GPS asset tracking device
-pagination_label: Oyster
-sidebar_label: Oyster
+title: Oyster3
+description: Ultra-rugged, long-life battery-powered GPS asset tracking device for LoRaWAN Networks
+pagination_label: Oyster3
+sidebar_label: Oyster3
 image: img/use-the-network/devices/ready-to-use/digital-matter/oyster.png
 slug: /use-the-network/devices/ready-to-use/digital-matter/oyster
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Oyster
+## Oyster3
 
-Ultra-rugged, long-life battery-powered LoRaWAN® GPS asset tracking device
+Ultra-rugged, long-life battery-powered GPS asset tracking device for LoRaWAN Networks.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/digital-matter/oyster.png')} />
 
 ### Resources
 
 - [Product Page](https://www.digitalmatter.com/devices/oyster-lorawan)
+- [Datasheet]
+  (https://www.digitalmatter.com/wp-content/uploads/2023/02/Oyster3-LoRaWAN-Datasheet-Digital-Matter-V8.pdf)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- battery
-- gps
+- GPS
 - temperature
+- battery
 
 #### Dimensions:
 
 - width: 86 mm
 - length: 108 mm
-- height: 31 mm
+- height: 30 mm
 
 #### Weight:
 
-- 188 grams
+- 180 grams (batteries not included)
 
 #### Battery:
 
-- type: AA
+- type: 3x AA Lithium (LiFeS2) or Lithium Thionyl Chloride (LTC)
 - replaceable: True
+
+#### Note:
+- This next generation Oyster tracking device has over 10 years of battery life.
+- 4x battery life of Oyster LoRaWAN V1.
 
 ---
 
