Update dl-pr21.mdx (#1506)
* Update dl-pr21.mdx

Corrected spelling.
Added info.

* resolve build errors

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr21.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-pr21.mdx
@@ -1,9 +1,8 @@
 ---
 id: dl-pr21
-title: Dl-Pr21
-pagination_label: Dl Pr21
-sidebar_label: Dl-Pr21
-description: Pressure / Liquid Level And Temperature Sensor With G1/4" Pipe Thread For LoRaWAN
+title: DL-PR21
+pagination_label: DL-PR21
+sidebar_label: DL-PR21
 image: img/use-the-network/devices/ready-to-use/decentlab/dl-pr21.jpg
 slug: /use-the-network/devices/ready-to-use/decentlab/dl-pr21
 ---
@@ -12,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## DL-PR21
 
-Pressure / Liquid Level and Temperature Sensor with G1/4" Pipe Thread for LoRaWAN
+Pressure / Liquid Level and Temperature Sensor with G1/4" Pipe Thread for LoRaWAN.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/decentlab/dl-pr21.jpg')} />
 
@@ -23,6 +22,9 @@ Pressure / Liquid Level and Temperature Sensor with G1/4" Pipe Thread for LoRaWA
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - pressure
@@ -31,17 +33,25 @@ Pressure / Liquid Level and Temperature Sensor with G1/4" Pipe Thread for LoRaWA
 
 #### Dimensions:
 
+Device:
 - width: 81 mm
 - length: 135 mm
 - height: 70 mm
 
+Sensor:
+- diameter: 21 mm
+- length: 56 mm
+
+Sensor cable:
+- length: 2 m
+
 #### Weight:
 
-- 510 grams
+- 510 grams (including batteries and sensor)
 
 #### Battery:
 
-- type: 2 C alkaline
+- type: 2x C alkaline (LR14)
 - replaceable: True
 
 ---
